language/move-lang/tests/move_check/expansion/standalone_mname_with_type_args.exp
error: 

   ┌── tests/move_check/expansion/standalone_mname_with_type_args.move:3:22 ───
   │
 3 │         let _ = 0 + M<u64>;
   │                           ^ Unexpected ';'
   ·
 3 │         let _ = 0 + M<u64>;
   │                           - Expected either a brace-enclosed list of field expressions or a parenthesized list of arguments for a function call
   ·
 3 │         let _ = 0 + M<u64>;
   │                      - Perhaps you need a blank space before this '<' operator?
   │

